[tool.poetry]
name = "hw3"
version = "0.1.0"
description = "hw"
authors = ["blackbear <zoeytu0919@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pillow = "^11.0.0"
torch = "^2.5.1"
torchvision = "^0.20.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
